<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/fonfo_pan">

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registrar"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/botoningresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ingresar"
        android:layout_marginTop="10dp"/>
</LinearLayout>
