<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/fonfo_pan">

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:background="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BotonGuaradarUser"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BotonVolverCalculos"
        android:layout_marginTop="10dp"/>
</LinearLayout>
